fix: align content on the center of the page

--- a/become-a-partner/become-a-partner.css
+++ b/become-a-partner/become-a-partner.css
@@ -9,7 +9,7 @@
     height: 127px;
     position: relative;
     border: none;
-    z-index: 0;
+    z-index: 100;
     padding: 0 80px 0 63px;
 }
 
@@ -25,7 +25,7 @@
 .container-fluid {
     padding: 0;
     height: 100%;
-    max-width: 1200px;
+    max-width: 1190px;
 }
 
 .navbar-right {
@@ -86,12 +86,12 @@
 
 .logo-link {
     display: flex;
+    z-index: 10;
 }
 
 .logo {
     width: 289.57px;    
     padding: 0;
-    z-index: 2;
 }
 
 .partnership {
@@ -113,7 +113,6 @@
 
 .partnership__title-container {
     grid-column: span 2;
-    z-index: -1;
 }
 
 .top-left-vector {
@@ -133,7 +132,7 @@
     display: grid;
     grid-template-columns: repeat(2, minmax(min-content, max-content));
     grid-template-rows: repeat(3, minmax(min-content, max-content));
-    max-width: 1170px;
+    max-width: 1190px;
     align-self: center;
     margin: 51px 0 100px;
     column-gap: 80px;
@@ -151,14 +150,11 @@
 .block-container__article {
     display: flex;
     flex-direction: column;
-    /* max-width: 500px; */
-    z-index: -1;
 }
 
 .block-container__title {
     font-family: 'LT-Wave-Bold', sans-serif;
     font-size: 1.78em;
-    /* font-size: 30px; уменьшила шрифт до 25px */
     font-weight: 700;
     line-height: 1.4;
     color: #402913;
@@ -169,7 +165,6 @@
 .block-container__subtitle {
     font-family: 'LT-Wave-Regular';
     font-size: 1.07em;
-    /* font-size: 20px; уменьшила шрифт до 15px*/
     font-weight: 400;
     line-height: 1.4;
     margin: 0;
@@ -230,8 +225,6 @@
 .block-container__form {
     background-color: #FFF7E1;
     padding: 23px 46px;
-    z-index: 0;
-    /* padding: 66px 66px 46px 66px; */
     box-shadow: 0px 14px 42px 0px #14142B24;
     border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -247,7 +240,6 @@
     line-height: 33.6px;
     color: #402913;
     margin: 0 0 25px 0;
-    /* margin: 0 0 35px 0; */
 }
 
 .text-inputs {
@@ -291,7 +283,6 @@
     font-weight: 900;
     line-height: 23.8px;
     text-align: center;
-    z-index: 2;
 }
 
 .bottom-right-vector {
@@ -336,7 +327,6 @@
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    /* max-width: 1040px; */
 }
 
 .footer > .navbar {
@@ -352,7 +342,6 @@
 }
 
 .footer {
-    z-index: -1;
     overflow: hidden;
 }
 
@@ -719,7 +708,6 @@
         height: 100%;
         top: 61%;
         right: 0;
-        z-index: -2;
     }
     .desktop-title {
         display: none;
@@ -728,14 +716,12 @@
         display: block;
         text-align: center;
         padding: 62px 0 37px;
-        z-index: -1;
     }
     .block-container__form {
         align-self: center;
         margin: 0 4.8%;
         padding: 23px 25px;
         position: relative;
-        z-index: -1;
     }
     .bottom-coffee-beans-vector {
         display: flex;
@@ -784,10 +770,4 @@
     width: 100%;
     gap: 50px;
    }
-}
-
-@media screen and (min-width: 1201px) {
-    .container-fluid {
-        max-width: 1170px;
-    }
 }
