--- a/feedback/feedback.css
+++ b/feedback/feedback.css
@@ -9,7 +9,7 @@
     height: 127px;
     position: relative;
     border: none;
-    z-index: 0;
+    z-index: 100;
     padding: 0 80px 0 63px;
 }
 
@@ -94,6 +94,11 @@
     content: none; 
 }
 
+.logo-link {
+    display: flex;
+    z-index: 10;
+}
+
 .logo {
     width: 289.57px;    
     padding: 0;
@@ -133,11 +138,11 @@
 .feedback__title-container {
     display: flex;
     margin: 50px 0 0;
-    z-index: -1;
 }
 
 .wrapper {
     display: flex;
+    max-width: 1170px;
     align-self: center;
     column-gap: 69.13px;
     padding-top: 28px;
@@ -601,7 +606,6 @@
     .wrapper {
         flex-direction: column;
         width: 100%;
-        z-index: -1;
     }
     .location-info__contacts {
         position: static;
@@ -634,7 +638,6 @@
     .form {
         min-width: 340px;
         padding: 23px 18px;
-        z-index: -1;
     }
     .btn {
         width: 100%;
@@ -676,7 +679,6 @@
     body > .feedback {
         padding: 0;
         overflow: hidden;
-        z-index: -1;
     }
     .mobile-title {
         display: block;
@@ -756,11 +758,10 @@
 @media screen and (min-width: 1201px) {
     .feedback__title-container {
         width: 1170px;
-        /* margin: 0 auto; */
         margin: 50px auto 0 auto;
     }
     .container-fluid {
-        max-width: 1170px;
+        max-width: 1190px;
     }
 }
 
